--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li><a class="dropdown-item" href="#">Configurações</a></li>
                         <li><a class="dropdown-item" href="#">Ajuda</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">deslogar</a></li>
+                        <li><a class="dropdown-item" href="#">Sair</a></li>
                     </ul>
                 </div>
             </div>
